web/resources/css/global.css
/*
Created by Benjamin Sweeney on 2016.04.16 
Copyright © 2016 Benjamin Sweeney. All rights reserved.
*/
/* 
    Created on : Apr 16, 2016, 2:54:02 PM
    Author     : Ben
    
    Most of this css was added by Kent and is used for the index. 
*/

.ui-datagrid-column {
/*    width: 100%!important;
    height: 100%!important;*/
}

/*@import url(http://fonts.googleapis.com/css?family=Varela+Round);*/

html, body { 
    background: #333; 
    margin:0; padding:0; 
    color:orange;
}

.confirmation {
    font-size: 24px;
    color: black;
}

.textOverlay { 
   margin: auto;
   position: relative; 
   width: 100%; 
   height: 420px;
   overflow:hidden;
}

#backImage {
    width: 100%;
    height: 420px;
}

.movieTitle{
    position: absolute;
    font-weight: bold;
    top: 20px;
    font-size: 1.8vw;
    color: #fff;
    padding: 0 20px;
    line-height: 150%;
    background: rgba(247, 148, 29, 0.7);
    margin: 0px;
    font-family: 'Lato', sans-serif;
}

#title1 {
    width: 22%;
}

#title2 {
    width: 33%;
}

#title3 {
    width: 11%;
}

#title4 {
    width: 19%;
}

#title5 {
    width: 13%;
}

#title6 {
    width: 24%;
}

.rtRating {
    position: absolute;
    top: 100px;
    font-size: 1.7vw;
    color: #fff;
    padding: 0 20px;
    width: 12%;
    line-height: 150%;
    background: rgba(247, 148, 29, 0.7);
    margin: 0px;
    font-family: 'Lato', sans-serif;

}

.imdbRating {
    position: absolute;
    top: 190px;
    font-size: 1.7vw;
    color: #fff;
    padding: 0 20px;
    width: 12%;
    line-height: 150%;
    background: rgba(247, 148, 29, 0.7);
    margin: 0px;
    font-family: 'Lato', sans-serif;

}

.criticsTitle{
    position: absolute;
    bottom: 180px;
    right:0px;
    font-size: 1.7vw;
    color: #fff;
    padding: 0 20px;
    width: 18%;
    line-height: 150%;
    background: rgba(247, 148, 29, 0.7);
    margin: 0px;
}


.criticsConsensus{
    position: absolute;
    bottom: 20px;
    right: 0px;
    font-size: 1.3vw;
    color: #fff;
    padding: 0 20px;
    width: 35%;
    line-height: 150%;
    background: rgba(247, 148, 29, 0.7);
    margin: 0px;
}

.cropcircle{
    width: 250px;
    height: 250px;
    border-radius: 100%;
    background: #eee no-repeat center;
    background-size: cover;
}

#image1{
    background-image: url(http://www.voont.com/files/images/edit/7-ridiculous-ways-boost-self-esteem/happy.jpg);
}

.grow { 
    transition: all .2s ease-in-out; 
    border-width: 10px;
    border-style: double;
    border-color: black;
}
.grow:hover {
    transform: scale(1.1); 
}

.userImage {
    border-radius: 100%;
}

.userImage:hover {
    cursor: pointer;
    opacity: 0.5;
    background-color: rgba(247, 148, 29, 0.7)
}

#topPostersDiv {
    /*background-color: rgba(60, 197, 188, 1)*/
    background: lightgrey;
}

.ticketsAndShowtimesDiv {
    background-color: lightgrey; 
}

.topPostersPanel {
    background-color: #3cc5bc;
    margin-bottom: 20px;
}

.ticketsPanel {
    background-color: #3cc5bc;
    
    margin-top: 20px;
    margin-bottom: 30px;
    
}

#ticketsAndShowtimesTitle {
    margin-top:2px;
    margin-bottom:15px;
}

h1 {
    font-family: 'Lato', sans-serif;
    color: orange;
}


#criticallyAcclaimedTitle {
    margin-top: 20px;
    margin-bottom: 20px;
}

#popularTitle {
    margin-top: 2px;
    margin-bottom: 18px;
}

.topMenu {
    vertical-align: top;
    width:99.4%; 
    height:60px; 
    background-color: #3cc5bc; 
    font-size: 25px;
}

.movieTab {
    color: white;
    background: #f7941d;
}

.theaterTab {
    color: white;
    background: #3cc5bc;
}

/*
#index {
    background-color: gray;

}

#moviesPage {
    background-color: lightgray;
    margin:0; padding:0; 
    color:orange;

    height:100%;
    width: 100%; 

}
*/

.colHeader {
    color: orange;
    font-size: 30px;
}

h2 {
    color:black;
}

p {
    margin:0;
}

.headerBarTable td {
    vertical-align: top;
}

.page {
    position: relative;
    height:100%;
}

.popup {
    position:absolute;
    z-index:2;
    top:0;
    left:0;
    width:100%;
    height:100%;
    background:rgba(0,0,0,0.7);
    opacity:0;
    visibility:hidden;
    transition:.3s ease;
}

.show-popup .popup {
    opacity:1;
    visibility: visible;    
}

.popup > iframe {
    position:absolute;
    top:50px;
    left:50%;
    margin-left:-280px;
}
.slides {
    padding: 0;
    width: 70%;
    height: 420px;
    display: block;
    margin: 0 auto 20px auto;
    position: relative;
}

.slides * {
    -user-select: none;
    -ms-user-select: none;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -webkit-touch-callout: none;
}

.slides input { display: none; }

.slide-container { display: block; }

.slide {
    top: 0;
    opacity: 0;
    width: 100%;
    height: 420px;
    display: block;
    position: absolute;

    transform: scale(0);

    transition: all .7s ease-in-out;
}

.slide img {
    width: 100%;
    height: 100%;
}

.nav label {
    width: 200px;
    height: 100%;
    display: none;
    position: absolute;

    opacity: 0;
    z-index: 9;
    cursor: pointer;

    transition: opacity .2s;

    color: #FFF;
    font-size: 156pt;
    text-align: center;
    line-height: 380px;
    font-family: "Varela Round", sans-serif;
    background-color: rgba(255, 255, 255, .3);
    text-shadow: 0px 0px 15px rgb(119, 119, 119);
}

.slide:hover + .nav label { opacity: 0.5; }

.nav label:hover { opacity: 1; }

.nav .next { right: 0; }

input:checked + .slide-container  .slide {
    opacity: 1;

    transform: scale(1);

    transition: opacity 1s ease-in-out;
}

input:checked + .slide-container .nav label { display: block; }

.nav-dots {
	width: 100%;
	bottom: 9px;
	height: 11px;
	display: block;
	position: absolute;
	text-align: center;
}

.nav-dots .nav-dot {
	top: -5px;
	width: 11px;
	height: 11px;
	margin: 0 4px;
	position: relative;
	border-radius: 100%;
	display: inline-block;
	background-color: rgba(255, 255, 255, 0.6);
        
}

.nav-dots .nav-dot:hover {
	cursor: pointer;
	background-color: rgba(0, 0, 0, 0.8);
}

input#img-1:checked ~ .nav-dots label#img-dot-1,
input#img-2:checked ~ .nav-dots label#img-dot-2,
input#img-3:checked ~ .nav-dots label#img-dot-3,
input#img-4:checked ~ .nav-dots label#img-dot-4,
input#img-5:checked ~ .nav-dots label#img-dot-5,
input#img-6:checked ~ .nav-dots label#img-dot-6 {
	background: rgba(247, 148, 29, 0.8);
}

/*
#parent {
    text-align:center;
}
*/
.back
{  
    display:inline-block;
    position:relative;
}
.playIcon
{
    position:absolute;
    top:5px;
    left:5px;
    opacity: 0.45;
 }
 
.playIcon:hover{
    cursor:pointer;
    opacity: 1.0;
 }

 .rightAlign {
    text-align: right;
}



 .leftAlign {
    text-align: left;
}

.leftStaticCol{
    vertical-align: top;
    table-layout: fixed;
    align-content: center;
    width:25%;
    height:50%;
    
    
}
.rightStaticCol{
    vertical-align: top;
    table-layout: fixed;
    width:75%;
    height:50%;
}

.borderedBottom{
    border-bottom: thick solid black;
    
}

.borderedRightAlign{
    border-bottom: solid black;
    background-color: #3cc5bc; 
    text-align: right;
}
.borderedLeftAlign{
    border-bottom: solid black;
    background-color: #3cc5bc; 
    text-align: left;
}

.tabProfile{
    background-color: #3cc5bc;
    color: #3cc5bc;
    
    
}

.row {
    background-color: gray;
}

